--- a/.github/workflows/github-action-test-py-code.yml
+++ b/.github/workflows/github-action-test-py-code.yml
@@ -12,10 +12,10 @@ jobs:
         uses: actions/checkout@v4
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - name: Install dependencies
-      - run: pip install pytest pylint
+        run: pip install pytest pylint
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
       - name: test code
-      - run: pytest -q test_maths.py
+        run: pytest -q test_maths.py
       - name: Lint Code
-      - run: pylint $(git ls-files '*.py')
+        run: pylint $(git ls-files '*.py')
 
